--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,5 +1,14 @@
-
-
+  
   body {
       min-height: 100vh;
+      font-size: 16px;
+      line-height: 30px;
+      color: $default;
+      @extend %dmsans-500;
+  }
+
+  .container {
+    max-width: 1800px;
+    margin: 0 auto;
+    padding: 0 15px;
   }
