--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -6,6 +6,95 @@
 
 
 
+.header {
+    padding: 50px 0;
+
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .menu {
+        &__list {
+            display: flex;
+        }
+
+        &__list-item + .menu__list-item {
+            padding-left: 30px;
+        }
+
+        &__list-link {
+            @extend %rubick-500;
+            color: #436372;
+            font-size: 15px;
+            line-height: 12px;
+        }
+
+        &__list-plus::after {
+            content: '+';
+            padding-left: 2px;
+        }
+    }
+
+    .user-nav {
+        display: flex;
+
+        &__link {
+            display: flex;
+            justify-content: center;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            position: relative;
+        }
+
+        &__link-search {
+            background-color: #edf1f4;
+        }
+
+        &__link-btn {
+            background-color: #a3bbc8;
+        }
+
+        &__link-noted {
+            display: flex;
+            justify-content: space-evenly;
+            width: 180px;
+            border-bottom-left-radius: 30px;
+            border-top-left-radius: 30px;
+            border-top-right-radius: 30px;
+            border-bottom-right-radius: 30px;
+            background-color: $accent;
+            margin: 0 35px;
+            position: relative;
+        }
+
+        &__link-noted::before {
+            content: '';
+            border: 1px solid #fde7d3;
+            height: 32px;
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+
+        &__link-num {
+            font-size: 10px;
+            line-height: 15px;
+            text-align: center;
+            width: 15px;
+            height: 15px;
+            background-color: #fff;
+            border-radius: 50%;
+            position: absolute;
+            top: 10px;
+            right: 7px;
+        }
+             
+    }
+}
+
 
 
 
