--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,9 +1,11 @@
 $accent: #fcd7b6;
 $default: #243f4d;
+$link-color: #7b7b7b;
+$footer-title: #1f2044;
 
-%dmsans-400 {
-    font-family: 'DMSans-Regular', sans-serif;
-    font-weight: 400;
+%dmsans-700 {
+    font-family: 'DMSans-Bold', sans-serif;
+    font-weight: 700;
 }
 
 %dmsans-500 {
@@ -11,13 +13,8 @@ $default: #243f4d;
     font-weight: 500;
 }
 
-%dmsans-700 {
-    font-family: 'DMSans-Bold', sans-serif;
-    font-weight: 700;
-}
-
-%rubick-400 {
-    font-family: 'Rubik-Regular', sans-serif;
+%dmsans-400 {
+    font-family: 'DMSans-Regular', sans-serif;
     font-weight: 400;
 }
 
@@ -25,3 +22,9 @@ $default: #243f4d;
     font-family: 'Rubik-Medium', sans-serif;
     font-weight: 500;
 }
+
+%rubick-400 {
+    font-family: 'Rubik-Regular', sans-serif;
+    font-weight: 400;
+}
+
