--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -90,11 +90,125 @@
             position: absolute;
             top: 10px;
             right: 7px;
-        }
-             
+        }       
     }
 }
 
+
+.footer {
+    @extend %rubick-400;
+}
+
+.footer-top {
+    display: flex;
+    padding: 75px 0;
+    border-bottom: 1px solid #dae4e9;
+
+    &__contact {
+        width: 240px;
+        margin-right: 60px;
+    }
+
+    &__logo {
+        display: block;
+        margin-bottom: 20px;
+    }
+
+    &__address,
+    &__phone, 
+    &__email {
+        display: block;
+        margin-bottom: 20px;
+        
+    }
+
+    &__nav {
+            width: 270px;
+            margin-right: 30px;
+    }
+
+    &__title {
+        @extend %dmsans-700;
+        text-transform: uppercase;
+        color: $footer-title;
+        font-size: 16px;
+        line-height: 40px;
+        margin-bottom: 18px;
+    }
+
+      
+
+    &__link {
+        display: block;
+        margin-bottom: 20px;
+    }
+
+    &__subscribe {
+        width: 270px;
+    }
+
+    &__text {
+        font-size: 14px;
+        line-height: 24px;
+        color: $link-color;
+        margin-bottom: 35px;
+    }
+
+    &__form-input {
+        max-width: 170px;
+        width: 100%;
+        font-size: 12px;
+        border: none;
+        background-color: #fef7f0;
+        padding: 5px 15px;
+        /* padding: 10px 15px; */
+        &::placeholder {
+            /* @extend %dmsans-400; 
+            font-size: 12px;*/
+            @extend %dmsans-700; //визуально более похож
+            color: #234969;
+        }
+    }
+
+    &__form-btn {
+        @extend %dmsans-400;
+        color: #fff;
+        border: none;
+        background-color: #a3bbc8;
+        font-size: 14px;
+        line-height: 21px;
+        padding: 9px 20px 10px 15px;
+        margin-left: -4px;
+        /* line-height: 22px;
+        padding: 14px 20px 14px 15px;
+        margin-left: -4px; */
+
+        
+    }
+}
+
+.footer-bottom {
+    display: flex;
+    justify-content: space-between;
+    padding: 35px 0;
+    @extend %rubick-400;
+    font-size: 14px;
+    line-height: 32px;
+    color: $link-color;
+
+    &__list {
+        display: flex;
+    }
+
+    &__list-item + .footer-bottom__list-item {
+        margin-left: 14px;
+        padding: none;
+        a {
+            padding-left: 14px;
+            border-left: 1px solid;
+        }
+    }
+}
 
 
 
