--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -30,3 +30,25 @@
     line-height: 24px;
     color: $link-color;
   }
+
+  .arrow {
+    display: inline-block;
+    height: 2px;
+    width: 22px;
+    background: #fff;
+    position: absolute;
+    right: 23px;
+    top: 50%;
+    transform: translateY(-50%);
+
+    &::after {
+        content: "";
+        position: absolute;
+        width: 0;
+        height: 0;
+        border: 5px solid transparent;
+        border-left-color: #fff;
+        right: -10px;
+        top: -4px;
+    }
+}
