--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -52,3 +52,12 @@
         top: -4px;
     }
 }
+
+.title {
+  font-size: 36px;
+  line-height: 48px;
+  @extend %dmsans-700;
+  color: $title;
+  text-align: center;
+  margin-bottom: 20px; //все отступы вниз одинаковые будут
+}
