added video popup

--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -30,6 +30,13 @@ $filter-btn: #8b8b8b;
     font-weight: 400;
 }
 
+@function max($numbers...) {
+    @return m#{a}x(#{$numbers});
+}
+@function min($numbers...) {
+    @return m#{i}n(#{$numbers});
+}
+
 
 
 
