fix blog text underline

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -555,6 +555,7 @@
         font-size: 18px;
         color: #262626;
         border-bottom: 1px solid #e0e0e0;
+        padding-bottom: 15px;
         margin-bottom: 15px;
     }
 
