--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -537,10 +537,25 @@
 
     &__img-link {
         display: block;
+        position: relative;
         img {
             object-fit: cover;
             height: 250px;
         }
+    }
+
+    &__img-link--new::before {
+        content: "news";
+        position: absolute;
+        font-size: 14px;
+        line-height: 1;
+        text-transform: uppercase;
+        padding: 7px 30px;
+        background-color: #a3bbc8;
+        color: #fff;
+        border-radius: 17px;
+        bottom: -14px;
+        left: 30px;
     }
 
     &__content {
@@ -565,6 +580,16 @@
     }
     &__date {
         margin-right: 30px;
+
+        &::before {
+            background-image: url('../images/icons/calendar-icon.png');
+            top: 7px;
+        }
+    }
+
+    &__author::before {
+        background-image: url('../images/icons/author-icon.png');
+        top: 5px;
     }
     &__date,
     &__author {
@@ -572,6 +597,16 @@
         font-size: 12px;
         color: #222933;
         text-transform: uppercase;
+        padding-left: 15px;
+        position: relative;
+
+        &::before {
+            content: '';
+            position: absolute;
+            width: 12px;
+            height: 13px;
+            left: 0;
+        }
     }
 }
 
