--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -29,6 +29,10 @@ $filter-btn: #8b8b8b;
     font-family: 'Rubik-Regular', sans-serif;
     font-weight: 400;
 }
+%rubick-300 {
+    font-family: 'Rubik-Light', sans-serif;
+    font-weight: 300;
+}
 
 @function max($numbers...) {
     @return m#{a}x(#{$numbers});
