--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -660,21 +660,10 @@
     }
 }
 
-
-
 .main-page__partners {
     margin-top: -240px;
     padding: 255px 0 80px;
 }
-
-  
-  
-
-
-
-
-
-
 
 .design {
     padding: 100px 0 120px;
@@ -738,6 +727,67 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
+}
+
+.login {
+    padding-top: 110px;
+    max-width: 470px;
+    margin: 0 auto 120px;
+    @extend %rubick-400;
+    color: #436372;
+    font-size: 14px;
+
+    &__label {
+        margin-bottom: 25px;
+        display: block;
+    }
+
+    &__input {
+        margin-top: 10px;
+        display: block;
+        width: 100%;
+        height: 60px;
+        border: 2px solid #f6f6f6;
+        padding: 0 15px;
+    }
+
+    &__btn {
+        margin: 10px 0 30px;
+        color: #fff;
+        background-color: #a3bbc8;
+        font-size: 18px;
+        line-height: 1;
+        border: none;
+        width: 100%;
+        padding: 20px 0;
+    }
+
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+        border-bottom: 2px solid #f6f6f6;
+        margin-bottom: 30px;
+    }
+
+    &__restore {
+        color: inherit;
+    }
+
+    &__create-account {
+        text-align: center;
+    }
+
+    &__create-link {
+        display: block;
+        @extend %rubick-500;
+        font-size: 18px;
+        line-height: 1;
+        color: #243f4d;
+        margin-top: 20px;
+        width: 100%;
+        padding: 20px 0;
+        border: 2px solid #a3bbc8;
+    }
 }
 
 
