--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -34,6 +34,14 @@ $filter-btn: #8b8b8b;
     font-weight: 300;
 }
 
+%checkbox-hidden {
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+    position: absolute;
+}
+
 @function max($numbers...) {
     @return m#{a}x(#{$numbers});
 }
