--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -446,7 +446,7 @@
             margin-bottom: 20px;
         }
 
-        .product-item__star {
+        .star {
             display: block;
             margin-bottom: 35px;
         }
@@ -1121,6 +1121,423 @@
 .irs-from, .irs-to, .irs-single {
     display: none;
 }
+
+.product-page {
+    padding: 120px 0 125px;
+}
+
+.product-detail {
+    &__inner {
+        display: flex;
+    }
+
+    &__slide {
+        width: 550px;
+        margin-right: 70px;
+    }
+
+    &__content {
+        width: 550px;
+    }
+}
+
+.product-slide {
+    display: flex;
+
+    .slick-vertical .slick-slide {
+        height: 160px;
+        margin-bottom: 25px;
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+    &__thumb {
+        width: 138px;
+        margin-right: 25px;
+    }
+
+    &__thumb-item {
+        margin-bottom: 25px;
+        width: 138px;
+        height: 160px;
+        border: 2px solid #f2f2f2;
+        cursor: pointer;
+        img {
+            width: 134px;
+            height: 156px;
+            object-fit: cover;
+        }
+    }
+
+    &__big {
+        width: 387px;
+    }
+
+    &__big-item {
+        width: 387px;
+        height: 530px;
+        border: 2px solid #f2f2f2;
+        img {
+            width: 383px;
+            height: 526px;
+            object-fit: cover;
+        }
+    }
+}
+
+.product-detail {
+    @extend %rubick-400;
+    &__content {
+        padding: 25px 0;
+    }
+
+    &__title {
+        font-size: 40px;
+        font-weight: 400;
+        color: #333;
+        margin-bottom: 20px;
+    }
+
+    .star {
+        display: block;
+    }
+
+    &__price {
+        margin: 35px 0;
+        font-size: 30px;
+        color: #333;
+    }
+
+    &__form {
+        margin: 27px 0 55px;
+    }
+
+    &__btn {
+        padding: 18px 50px;
+        font-size: 15px;
+        line-height: 1;
+        color: #fff;
+        text-transform: uppercase;
+        border: none;
+        border-radius: 4px;
+        background-color: #a3bbc8;
+        margin-left: 15px;
+        cursor: pointer;
+    }
+}
+
+.product-info {
+    &__item {
+        display: flex;
+    }
+
+    &__text {
+        margin-left: 5px;
+        a {
+            color: $default;
+            font-size: 16px;
+        }
+    }
+}
+
+.jq-number {
+    padding: 0;
+    position: relative;
+}
+
+.jq-number__field {
+    width: 148px;
+    border: 1px solid #a3bbc8;
+    border-bottom-color:  #a3bbc8;
+    border-radius: 0;
+    box-shadow: none;
+}
+
+.jq-number__field input {
+    width: 100%;
+    padding: 16px 0px;
+    border: none;
+    outline: none;
+    background: none;
+    font: 15px Rubik-Regular, sans-serif;
+    color: #333;
+    text-align: center;
+}
+
+.jq-number__spin {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 50px;
+    height: 100%;
+    border: 1px solid #a3bbc8;
+    border-bottom-color:#a3bbc8;
+    border-radius: 0;
+    background: transparent;
+    box-shadow: none;
+    text-shadow: none;
+    cursor: pointer;
+
+    &:hover {
+        background: transparent;
+    }
+
+    &::after {
+    content: '+';
+    position: absolute;
+    top: 10px;
+    left: 19px;
+    width: 0;
+    height: 0;
+    border-right: none;
+    border-bottom: none;
+    border-left: none;
+    }
+}
+
+.jq-number__spin.minus {
+    left: 0;
+
+    &:after {
+    content: '-';
+    top: 10px;
+    border-top: none    ;
+    border-right: none;
+    border-bottom: none;
+    border-left: none;
+    }
+}
+
+.product-tabs {
+    padding-top: 90px;
+    @extend %rubick-400;
+    &__top {
+        text-align: center;
+        margin-bottom: 35px;
+    }
+
+    &__top-item {
+        display: inline-block;
+        width: 240px;
+        @extend %rubick-500;
+        font-size: 18px;
+        color: $default;
+        padding: 15px 0;
+        background-color: #edf1f4;
+        border-radius: 4px;
+        & + .product-tabs__top-item {
+            margin-left: 15px;
+        }
+    }
+
+    &__top-item--active {
+        color: #fff;
+        background-color: #a3bbc8;
+    }
+
+    &__content-item {
+        display: none;
+        &.product-tabs__content-item--active {
+            display: block;
+        }
+    }
+}
+
+.comments {
+    display: flex;
+    margin-bottom: 35px;
+
+    &__img {
+        height: 71px;
+        min-width: 71px;
+        border-radius: 50%;
+        overflow: hidden;
+        object-fit: cover;
+        margin-right: 30px;
+    }
+
+    &__content-top {
+        display: flex;
+        align-items: center;
+        margin-bottom: 5px;
+    }
+
+    &__content-name {
+        color: #333;
+        margin-right: 15px;
+    }
+
+    &__content-date {
+        padding-left: 17px;
+        position: relative;
+        &::before {
+            content: '|';
+            position: absolute;
+            left: 0;
+            font-size: 12px;
+        }
+    }
+
+    &__content-star {
+        margin-left: auto;
+    }
+
+    &__content-reply {
+        margin-top: 13px;
+        padding-left: 25px;
+        color: $default;
+        @extend %rubick-400;
+        font-size: 16px;
+        position: relative;
+        &::before {
+            content: '';
+            position: absolute;
+            height: 13px;
+            width: 15px;
+            left: 0;
+            top: 3px;
+            background-image: url('../images/icons/reply.svg');
+        }
+    }
+}
+
+.comments-form {
+    padding-top: 25px;
+    &__title {
+        font-size: 22px;
+        color: #333;
+        margin-bottom: 40px;
+        padding-bottom: 15px;
+        position: relative;
+        &::before {
+            content: '';
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            height: 2px;
+            width: 50px;
+            background-color: #a3bbc8;
+        }
+    }
+
+    &__rating {
+        margin-bottom: 25px;
+        display: flex;
+        align-items: center;
+    }
+
+    &__rating-title {
+        display: inline-block;
+        margin-right: 60px;
+    }
+
+    &__radio {
+        display: block;
+        margin-right: 27px;
+    }
+
+    &__input {
+        @extend %checkbox-hidden;
+        &:checked + .comments-form__radio{
+            path {
+                fill: #ffcc00;
+            }
+        }
+    }
+
+    &__box-input {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 30px;
+    }
+
+    &__text-input {
+        width: 570px;
+        height: 50px;
+        padding: 0 15px;
+        border: 1px solid #a3bbc8;
+    }
+
+    &__textarea {
+        width: 100%;
+        height: 225px;
+        border: 1px solid #a3bbc8;
+        padding: 15px 20px;
+        margin-bottom: 30px;
+    }
+
+    &__btn {
+        padding: 20px 35px;
+        line-height: 1;
+        color: #fff;
+        border: none;
+        background-color: #a3bbc8;
+    }
+}
+
+.related {
+
+    &__title {
+        text-align: left;
+        margin-bottom: 50px;
+        color: $default;
+    }
+
+    .slick {
+        &-slide {
+            margin: 0 30px;
+          }
+          
+        &-list {
+            padding: 40px 0;
+            margin-left: -30px;
+            margin-right: -30px;
+          }
+    }
+
+    .slick-prev,
+    .slick-next {
+        position: absolute;
+        right: 0;
+        top: -100px;
+        cursor: pointer;
+    }
+
+    .slick-next {
+        background-color: transparent;
+        font-size: 0;
+        border: none;
+        height: 52px;
+        width: 52px;
+        background-image: url('../images/icons/slide-arrow.svg');
+        background-repeat: no-repeat;
+    }
+
+    .slick-prev {
+        background-color: transparent;
+        right: 70px;
+        font-size: 0;
+        border: none;
+        transform: rotate(180deg);
+        height: 52px;
+        width: 52px;
+        background-image: url('../images/icons/slide-arrow.svg');
+        background-repeat: no-repeat;
+    }
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 //Styles for product selectors
