--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1498,31 +1498,35 @@
     .slick-prev,
     .slick-next {
         position: absolute;
+        font-size: 0;
         right: 0;
         top: -100px;
+        height: 52px;
+        width: 52px;
+        background-position: center;
+        background-repeat: no-repeat;
         cursor: pointer;
+        background-color: transparent;
+        border: none;
+        outline-color: transparent;
     }
 
     .slick-next {
-        background-color: transparent;
-        font-size: 0;
-        border: none;
-        height: 52px;
-        width: 52px;
-        background-image: url('../images/icons/slide-arrow.svg');
-        background-repeat: no-repeat;
+        background-image: url('../images/icons/hidden-arrow.svg');
+        transform: rotate(180deg);
+        &:hover {
+            background-image: url('../images/icons/shown-arrow.svg');
+            transform: none;
+        }
     }
 
     .slick-prev {
-        background-color: transparent;
+        background-image: url('../images/icons/hidden-arrow.svg');
         right: 70px;
-        font-size: 0;
-        border: none;
-        transform: rotate(180deg);
-        height: 52px;
-        width: 52px;
-        background-image: url('../images/icons/slide-arrow.svg');
-        background-repeat: no-repeat;
+        &:hover {
+            background-image: url('../images/icons/shown-arrow.svg');
+            transform: rotate(180deg);
+        }
     }
 
 }
