created blog-box div and blog page

--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -34,6 +34,11 @@ $filter-btn: #8b8b8b;
     font-weight: 300;
 }
 
+%nunito-700 {
+    font-family: 'Nunito-Bold', sans-serif;
+    font-weight: 700;
+}
+
 %checkbox-hidden {
     width: 1px;
     height: 1px;
