--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1545,6 +1545,9 @@
         margin-right: 70px;
     }
 
+    &__items {
+        padding-bottom: 25px;;
+    }
     &__item {
         margin-bottom: 50px;
     }
@@ -1581,19 +1584,19 @@
             font-size: inherit;
             padding-left: 15px;
             &::before {
-                width: 10px;
-                height: 10px;
+                width: 11px;
+                height: 12px;
             }
         }
 
         &__date::before {
             background-image: url('../images/icons/calendar-icon.svg');
-            top: 9px;
+            top: 8px;
         }
 
         &__author::before {
             background-image: url('../images/icons/author-icon.svg');
-            top: 6px;
+            top: 5px;
         }
     }
 
@@ -1660,6 +1663,176 @@
         cursor: pointer;
     }
 }
+
+.blog-one {
+    &__text {
+        padding-bottom: 40px;
+        h3 {
+            @extend %rubick-400;
+            font-size: 36px;
+            color: #333;
+            margin: 30px 0 20px;
+        }
+        h5,
+        h4 {
+            @extend %rubick-500;
+            font-size: 16px;
+            margin: 20px 0;
+        }
+        h4 {
+            font-size: 18px;
+            margin-top: 55px;
+        }
+        p {
+            @extend %rubick-400;
+            margin: 20px 0;
+        }
+        blockquote {
+            padding: 20px 110px 20px 30px;
+            background-color: #edf1f4;
+            border-left: 6px solid #a3bbc8;
+            margin: 35px 0;
+            p {
+                margin: 0;
+                margin-bottom: 15px;
+            }
+            cite {
+                padding-left: 43px;
+                position: relative;
+                &::before {
+                    content: '';
+                    position: absolute;
+                    border-bottom: 3px solid #a3bbc8;
+                    width: 20px;
+                    left: 0;
+                    top: 50%;
+                    transform: translateY(-50%);
+                }
+            }
+        }
+
+        .blog-one__left-img {
+            float: left;
+            margin: 0 30px 10px 0;
+        }
+        .blog-one__right-img {
+            float: right;
+            margin: 30px 0 10px 0;
+        }
+    }
+
+    &__author {
+        padding: 25px 0;
+        border-top: 2px solid #ebebeb;
+        border-bottom: 2px solid #ebebeb;
+        display: flex;
+        align-items: center;
+    }
+
+    &__author-img {
+        height: 76px;
+        width: 76px;
+        object-fit: cover;
+        margin-right: 30px;
+    }
+
+    &__author-name {
+        @extend %rubick-500;
+        font-size: 18px;
+        line-height: 25px;
+        color: #333;
+        margin-bottom: 5px;
+    }
+
+    &__author-position {
+        color: #666;
+    }
+
+    &__box {
+        margin-left: auto;
+        padding-right: 20px;
+    }
+
+    &__tags,
+    &__share {
+        color: #333;
+    }
+
+    &__tags {
+        span {
+            margin-right: 30px;
+        }
+        a {
+            font-size: 16px;
+            color: #999;
+            &:hover {
+                color: $default;
+            }
+        }
+    }
+
+    &__share {
+        display: flex;
+        align-items: flex-end;
+        span {
+            margin-right: 20px;
+        }
+        a {
+            margin-right: 20px;
+            &:last-child{
+                margin-right: 0;
+                margin-bottom: 1px;
+            }
+            &:hover {
+                path {
+                    fill: $default;
+                }
+            }
+        }
+    }
+}
+
+.recent-post {
+    &__item {
+        display: flex;
+        margin-bottom: 20px;
+    }
+    &__img-link {
+        min-width: 71px;
+        margin-right: 20px;
+    }
+    &__img {
+        width: 71px;
+        height: 71px;
+        object-fit: cover
+    }
+    &__content-title {
+        @extend %rubick-400;
+        font-size: 14px;
+        line-height: 20px;
+        color: #333;
+    }
+
+    &__content-date {
+        padding-left: 17px;
+        font-size: 12px;
+        color: #9a9a9a;
+        position: relative;
+        &::before {
+            content: "";
+            position: absolute;
+            height: 12px;
+            width: 11px;
+            left: 0;
+            top: 8px;
+            background-image: url('../images/icons/calendar-icon-grey.svg');
+        }
+    }
+
+    
+}
+
+
 
 
 
