--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -19,6 +19,10 @@ $filter-btn: #8b8b8b;
     font-family: 'DMSans-Regular', sans-serif;
     font-weight: 400;
 }
+%rubick-700 {
+    font-family: 'Rubik-Bold', sans-serif;
+    font-weight: 700;
+}
 
 %rubick-500 {
     font-family: 'Rubik-Medium', sans-serif;
