--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -44,6 +44,7 @@
         &__link {
             display: flex;
             justify-content: center;
+            align-items: center;
             width: 50px;
             height: 50px;
             border-radius: 50%;
@@ -51,6 +52,7 @@
         }
 
         &__link-search {
+            align-items: center;
             background-color: #edf1f4;
         }
 
@@ -1004,6 +1006,7 @@
         @extend %rubick-400;
         display: flex;
         justify-content: space-between;
+        align-items: center;
         border-radius: 5px;
         margin-bottom: 2px;
     }
